[gd_scene load_steps=10 format=2]

[ext_resource path="res://entites/enemys/enemy_walking/EnemyTeste.gd" type="Script" id=1]
[ext_resource path="res://assets/graphic/sprites/enemys/Slime/slime-Sheet.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 6.19994
height = 4.15403

[sub_resource type="Animation" id=2]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.12, 0.25, 0.38 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.00784314, 0.00784314, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0.00784314, 0.00784314, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "death"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 17, 18, 19, 20 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HitBox/HitBoxColision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "hurt"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15, 16 ]
}

[sub_resource type="Animation" id=5]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=6]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="CapsuleShape2D" id=7]
radius = 6.82859
height = 8.15195

[node name="EnemyWalking" type="KinematicBody2D"]
rotation = 0.00398407
scale = Vector2( 1.5, 1.5 )
collision_layer = 0
collision_mask = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 4257.49 ]
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
flip_h = true
vframes = 3
hframes = 8

[node name="Body" type="CollisionShape2D" parent="."]
position = Vector2( -1.13033, 4.63873 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="AnimationEnemy2" type="AnimationPlayer" parent="."]
anims/take_damage = SubResource( 2 )

[node name="AnimationEnemy" type="AnimationPlayer" parent="."]
anims/death = SubResource( 3 )
anims/hurt = SubResource( 4 )
anims/idle = SubResource( 5 )
anims/walk = SubResource( 6 )

[node name="HitBox" type="Area2D" parent="."]
position = Vector2( -0.950397, 4.08742 )
collision_layer = 16
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="HitBoxColision" type="CollisionShape2D" parent="HitBox"]
position = Vector2( -0.081398, 0.000320435 )
rotation = 1.5708
shape = SubResource( 7 )

[node name="FloorColision" type="RayCast2D" parent="."]
position = Vector2( 15.7328, -2.81528 )
enabled = true
cast_to = Vector2( 0, 15 )

[node name="WallColision" type="RayCast2D" parent="."]
position = Vector2( -0.146893, 3.98879 )
enabled = true
cast_to = Vector2( 14, 0 )

[node name="Timers" type="Node" parent="."]

[node name="DelayAfterDamageTime" type="Timer" parent="Timers"]
wait_time = 0.4
one_shot = true
[connection signal="animation_finished" from="AnimationEnemy" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="area_exited" from="HitBox" to="." method="_on_HitBox_area_exited"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
